[package]
name = "queue"
version = "0.2.0"
authors = ["rascul <rascul3@gmail.com>"]
description = "Simple wrapper around Vec to provide a FIFO queue."
license = "MIT"
repository = "https://gitlab.com/rascul/queue"
documentation = "https://docs.rs/queue"
readme = "README.md"
keywords = ["fifo", "vec", "queue"]
categories = ["data-structures"]


[badges]
gitlab = { repository = "/rascul/queue", branch = "master" }

[dependencies]
